updated changes in the code

--- a/templates/mynotes.html
+++ b/templates/mynotes.html
@@ -33,7 +33,7 @@
                 <a href="/my_notes"><i class="fa fa-commenting" aria-hidden="true"></i>My Notes</a><br>
                 <a href="/support"><i class="fa fa-flag" aria-hidden="true"></i>Support</a><br>
             </nav>
-            <a href="/login" class="fa fa-arrow-right-from-bracket">Logout</a>
+            <a href="/logout" class="fa fa-arrow-right-from-bracket">Logout</a>
 
         </header>
         <section class="fill-in">
