--- a/templates/support.html
+++ b/templates/support.html
@@ -39,7 +39,7 @@
             <a href="/support"><i class="fa fa-flag" aria-hidden="true"></i>Support</a><br>
         
         </nav>
-        <a href="/login" class="fa fa-arrow-right-from-bracket">Logout</a>
+        <a href="/logout" class="fa fa-arrow-right-from-bracket">Logout</a>
 
         </header>
         <div class="content">
