--- a/static/styles.css
+++ b/static/styles.css
@@ -5,7 +5,9 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
-
+/* .submit:hover{
+   color:#4CAF50;
+} */
 body{
     color: white;
     
