--- a/templates/patientdata.html
+++ b/templates/patientdata.html
@@ -69,7 +69,7 @@
     <nav class="navbar">
       <a href="/report"><i class="fa fa-file" aria-hidden="true"></i>Report</a><br>
       <a href="/patient_data"><i class="fa fa-book" aria-hidden="true"></i>Patient Data</a><br>
-      <a href="/my_notes"><i class="fa fa-commenting" aria-hidden="true"></i>My Notes</a><br>
+      <!-- <a href="/my_notes"><i class="fa fa-commenting" aria-hidden="true"></i>My Notes</a><br> -->
       <a href="/support"><i class="fa fa-flag" aria-hidden="true"></i>Support</a><br>
 
     </nav>
