--- a/templates/patientdetail.html
+++ b/templates/patientdetail.html
@@ -374,7 +374,7 @@
       <a href="/report"><i class="fa fa-file" aria-hidden="true"></i>Report</a><br>
 
       <a href="/patient_data"><i class="fa fa-book" aria-hidden="true"></i>Patient Data</a><br>
-      <a href="/my_notes"><i class="fa fa-note-sticky" aria-hidden="true"></i>My Notes</a><br>
+      <!-- <a href="/my_notes"><i class="fa fa-note-sticky" aria-hidden="true"></i>My Notes</a><br> -->
       <a href="/support"><i class="fa fa-flag" aria-hidden="true"></i>Support</a><br>
 
     </nav>
