--- a/templates/report.html
+++ b/templates/report.html
@@ -228,7 +228,7 @@
     <nav class="navbar">
       <a href="/report"><i class="fa fa-file" aria-hidden="true"></i>Report</a><br>
       <a href="/patient_data"><i class="fa fa-book" aria-hidden="true"></i>Patient Data</a><br>
-      <a href="/my_notes"><i class="fa fa-note-sticky" aria-hidden="true"></i>My Notes</a><br>
+      <!-- <a href="/my_notes"><i class="fa fa-note-sticky" aria-hidden="true"></i>My Notes</a><br> -->
       <a href="/support"><i class="fa fa-flag" aria-hidden="true"></i>Support</a><br>
     </nav>
     <a href="/logout" class="fa fa-arrow-right-from-bracket">Logout</a>
